--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.2",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "nodemon": "^3.0.2",
     "react-icons": "^4.12.0"
   }
