--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "express-session": "^1.17.3",
     "nodemon": "^3.0.2",
     "react-icons": "^4.12.0"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
