--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "concurrently": "^8.2.2",
     "react-bootstrap": "^2.9.2"
