--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "CI= npm run build",
     "webpack": "webpack --mode development"
   },
   "eslintConfig": {
