--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -2,6 +2,7 @@
     command = "npm run build"
     publish = "build"
 [[redirects]]
-    from = "/*"
-    to = "/index.html"
+    from = "/proxy/*"
+    to = "http://localhost:8000"
     status = 200
+    force = true
